# computational-intelligence-22-23

./: README.md  pyproject.toml
RL maze/: Maze.py  RLAgent.py  main.py
lab1/: README.md  set_covering.ipynb
lab2/: README.md  set_covering.ipynb
lab3/: README.md  lab3_nim_f.ipynb  lab_3.3.ipynb  lab_3.4.ipynb  lab_3.4_fail.ipynb  lab_3.4_qtable_implementation.ipynb  lab_3.ipynb  nim.ipynb  nim_utils.py
lab3/strategies/: 0.json  1.json  2.json  3.json
playground/: rastrigin.ipynb
